<resources>
    <string name="app_name">临床小助</string>
    <string name="app_id">5bfe79ab</string>
    <string name="pref_key_translate">translate</string>
    <string name="voice_title">随访助手</string>
    <string name="in_title">住院首页</string>
    <string name="in_patient_list">在院病人列表</string>
    <string name="in_admis_date">入院日期：</string>
    <string name="in_admitting_diagnosis">入院诊断：</string>
    <string name="in_leave_diagnosis">出院诊断：</string>
    <string name="in_att_physician_name">主治医生：</string>
    <string name="in_basy">病案首页</string>
    <string name="in_ryjl">入院记录</string>
    <string name="in_bcjl">病程记录</string>
    <string name="in_cyjl">出院记录</string>
    <string name="in_ssjl">手术记录</string>
    <string name="in_hzjl">会诊记录</string>
    <string name="in_yzgl">医嘱管理</string>
    <string name="in_jybg">检验报告</string>
    <string name="in_jcbg">检查报告</string>
    <string name="in_tzzb">体征指标</string>
    <string name="in_hljl">护理记录（PAD）</string>
    <string name="in_yy">营养与康复评估（PAD）</string>
    <string name="in_zbmx">指标明细</string>
    <string name="in_cfbz">查房备注</string>
    <string name="in_cfbz_list">查房备注列表</string>
    <string name="in_info_title">基本信息</string>
    <string name="in_info_name">姓名：</string>
    <string name="in_info_sex">性别：</string>
    <string name="in_info_birth">出生日期：</string>
    <string name="in_info_age">年龄：</string>
    <string name="in_info_nation">国籍：</string>
    <string name="in_info_mz">民族：</string>
    <string name="in_info_mar">婚姻：</string>
    <string name="in_info_job">职业：</string>
    <string name="in_info_id">身份证号：</string>
    <string name="in_info_phone">联系电话：</string>
    <string name="in_info_address">联系地址：</string>
    <string name="in_info_contract">联系人：</string>
    <string name="in_info_rela">与患者关系：</string>
    <string name="in_info_source">来源：</string>
    <string name="in_info_contract_phone">联系人电话：</string>
    <string name="in_advice_type">医嘱类型：</string>
    <string name="in_advice_startt">开始时间：</string>
    <string name="in_advice_sign">医生签名：</string>
    <string name="in_advice_endt">停止时间：</string>
    <string name="in_advice_jy_no">检验条码：</string>
    <string name="in_advice_jc_no">申请单号：</string>
    <string name="in_advice_jc_date">申请时间：</string>
    <string name="in_advice_jc_doc">医生签名：</string>
    <string name="in_advice_jc_content">申请内容：</string>
    <string name="in_advice_jc_extra">备注：</string>
    <string name="in_advice_exe_time">执行时间：</string>
    <string name="in_advice_exer">执行人：</string>
    <string name="in_advice_s">开始：</string>
    <string name="in_advice_e">结束：</string>
    <string name="in_advice_jing">静</string>
    <string name="in_advice_wei">危</string>
    <string name="in_advice_die">跌</string>
    <string name="use_drug_channel_name">用法:</string>
    <string name="treat_record">门诊记录</string>
    <string name="treat_his">门诊病历</string>
    <string name="treat_drag">药品处方</string>
    <string name="treat_research">检验报告</string>
    <string name="treat_check">检查报告</string>
    <string name="treat_drag_dose">用量:</string>
    <string name="use_drug_freq">频率:</string>
    <string name="exam_report">检查报告</string>
    <string name="exam_no">检查单号:</string>
    <string name="exam_item">检查项目:</string>
    <string name="exam_doc">检查医生:</string>
    <string name="exam_time">检查时间:</string>
    <string name="exam_desc">1.检查描述</string>
    <string name="exam_sub">2.检查结论</string>
    <string name="test_report">检验报告</string>
    <string name="test_no">检验单号:</string>
    <string name="test_item">检验项目:</string>
    <string name="test_doc">检验医生:</string>
    <string name="test_time">报告时间:</string>
    <string name="test_title_item">项目</string>
    <string name="test_title_res">结果</string>
    <string name="test_title_normal">参考范围</string>
    <string name="test_title_unit">单位</string>
    <string name="in_info_cardid">病历号：</string>
    <string name="in_info_admis_days">入院天数：</string>
    <string name="in_info_ward">病区：</string>
    <string name="in_info_record_no">住院号：</string>
    <string name="in_info_days">住院天数：</string>
    <string name="in_info_medi_no">病历号：</string>
    <string name="in_info_res">入院原因：</string>
    <string name="in_info_bed">床号：</string>
    <string name="in_info_dept">科室：</string>
    <string name="in_info_doc">主治医生：</string>
    <string name="in_info_admis_time">入院时间：</string>
    <string name="in_info_leave_time">出院时间：</string>
    <string name="in_info_admis_dgn">入院诊断：</string>
    <string name="in_info_nurse_level">护理等级：</string>
    <string name="in_info_diet">饮食：</string>
    <string name="in_info_allergy">过敏史：</string>
    <string name="in_info_fee_type">费用类型：</string>
    <string name="in_info_per_fee">预交款：</string>
    <string name="in_info_self_fee">自付费用：</string>
    <string name="in_info_per_yue">预存余额：</string>
    <string name="ic_add_pic">添加照片</string>
    <string name="ic_add_voice">添加语音</string>

    <string name="op_list_title">手术记录</string>
    <string name="op_list_name">手术名称</string>
    <string name="op_list_date">手术日期</string>
    <string name="op_list_doc">手术医师</string>
    <string name="op_detail_title">手术记录明细：</string>
    <string name="op_detail_start">手术开始时间：</string>
    <string name="op_detail_end">手术结束时间：</string>
    <string name="op_detail_per_dg">术前诊断：</string>
    <string name="op_detail_name">手术名称：</string>
    <string name="op_detail_dg">术后诊断：</string>
    <string name="op_detail_member">手术人员：</string>
    <string name="op_detail_mz_way">麻醉方式：</string>
    <string name="op_detail_mz_doc">麻醉医生：</string>
    <string name="op_detail_progress">手术经过：</string>
    <string name="op_detail_record_doc">记录医生：</string>
    <string name="op_detail_record_time">记录时间：</string>
    <string name="op_detail_main">主刀医生：</string>
    <string name="op_detail_ass1">一&#8195;&#8195;助：</string>
    <string name="op_detail_ass2">二&#8195;&#8195;助：</string>

    <string name="in_admis_title">入院记录</string>
    <string name="in_admis_name">姓名：</string>
    <string name="in_admis_birth">出生日期：</string>
    <string name="in_admis_sex">性别：</string>
    <string name="in_admis_addr">联系地址：</string>
    <string name="in_admis_nation">民族：</string>
    <string name="in_admis_admis_date">入院日期：</string>
    <string name="in_admis_marr">婚姻：</string>
    <string name="in_admis_desc">入院科室：</string>
    <string name="in_admis_job">职业：</string>
    <string name="in_admis_doc">主治医师：</string>
    <string name="in_admis_birth_addr">手机号：</string>
    <string name="in_admis_main">【主&#160;&#160;&#160;&#160;诉】</string>
    <string name="in_admis_now">【现病史】</string>
    <string name="in_admis_his">【既往史】</string>
    <string name="in_admis_self">【个人史】</string>

    <string name="in_advice_t_0">医生</string>
    <string name="in_advice_t_1">全部</string>
    <string name="in_advice_t_2">全部</string>
    <string name="in_advice_t_3">当天</string>
    <string name="in_advice_title">医嘱查询</string>
    <string name="in_advice_start">开始时间</string>
    <string name="in_advice_content">医嘱内容</string>
    <string name="in_advice_end">停止时间</string>
    <string name="in_advice_name">医嘱</string>
    <string name="disease_record_title">病程记录</string>
    <string name="in_patient_title">我的病人</string>
    <string name="rp_title">报告查询</string>
    <string name="tp_bar_0">指标</string>
    <string name="tp_bar_1">结果</string>
    <string name="tp_bar_2">最近测量时间</string>
    <string name="tp_bar_3">事件/阶段</string>
    <string name="tp_bar_tw">体温</string>
    <string name="tp_bar_mb">脉搏</string>
    <string name="tp_bar_xl">心率</string>
    <string name="tp_bar_hx">呼吸</string>
    <string name="tp_bar_xy">血压</string>
    <string name="tp_bar_xt">快速血糖</string>
    <string name="tp_bar_tt">疼痛评分</string>
    <string name="tp_bar_spo">SPO2(%)</string>
    <string name="tp_bar_db">大便次数</string>
    <string name="tp_bar_rl">入量(ml)</string>
    <string name="tp_bar_cl">出量(ml)</string>
    <string name="tp_bar_nl">尿量(ml)</string>
    <string name="tp_bar_tz">体重(kg)</string>
    <string name="tp_bar_sg">身高(cm)</string>
    <string name="tp_fw">参考范围：</string>
    <string name="tp_rp_date">报告日期</string>
    <string name="tp_res">结果</string>
    <string name="tp_from">类型</string>
    <string name="chat_tip_chart">为您找到以下信息</string>
    <string name="chat_tip_case">为您找到以下信息</string>
    <string name="chat_tip_none">小助还在学习中&#8230;</string>
    <string name="login">登录</string>

</resources>
