<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="cn.wowjoy.commonlibrary.adapter.LayoutManagers" />

        <variable
            name="model"
            type="mobile.fuvh.cn.followupvisithelper.patient.bean.SurgeryreCodeListResponse.ResultsBean.ListBean" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/C_F7F7F7"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lay_15"
                    android:background="@color/C_FFFFFF"
                    android:orientation="vertical"
                    android:padding="@dimen/lay_12">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_start"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.operation_start_date}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_end"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text='@{model.operation_end_date}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_per_dg"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.preoperative_diagnosis}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_name"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.operation_name}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_dg"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.postoperative_diagnosis}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_member"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="@dimen/lay_25"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/op_detail_main"
                                    android:textColor="@color/C_101010"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text='@{model.operation_doc_name}'
                                    android:textColor="@color/C_101010"
                                    android:textSize="@dimen/font_16" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="@dimen/lay_25"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/op_detail_ass1"
                                    android:textColor="@color/C_101010"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text='@{model.first_assistant_user_name}'
                                    android:textColor="@color/C_101010"
                                    android:textSize="@dimen/font_16" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="@dimen/lay_25"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/op_detail_ass2"
                                    android:textColor="@color/C_101010"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text='@{model.second_assistant_user_name}'
                                    android:textColor="@color/C_101010"
                                    android:textSize="@dimen/font_16" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_mz_way"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.anaesthesia_name}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_mz_doc"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.anaesthesia_doc_name}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lay_15"
                    android:background="@color/C_FFFFFF"
                    android:orientation="vertical"
                    android:padding="@dimen/lay_12">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_progress"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.operation_course}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lay_5"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_record_doc"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.creatername}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lay_5"
                        android:minHeight="@dimen/lay_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_detail_record_time"
                            android:textColor="@color/C_555555"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{model.add_time}'
                            android:textColor="@color/C_101010"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>
